tests/rosetta/out/Smalltalk/cyclops-numbers.out
/tmp/cyclops-numbers.st:9: parse error, expected ']'
